@@ -1,3 +1,12 @@
+2012-09-10  Sterling Augustine  <saugustine@google.com>
+
+	* gdb-index.cc (Gdb_index::pubnames_read): New parameter.
+	(Gdb_index::pubtypes_read): New parameter.
+	(Gdb_index_info_reader::read_pubnames_and_pubtypes): Add parameters
+	to calls.
+	* gdb-index.h (Gdb_index): New fields pubnames_object_ and
+	pubtypes_object_.
+
 2012-09-09  Alan Modra  <amodra@gmail.com>
 
 	* target.h (Target::gc_mark_symbol, do_gc_mark_symbol): New functions.
